--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.data.mongodb.uri=mongodb://localhost:27017/BookStore
 #spring.data.mongodb.database=BookStore
 
 # The place to config your Data base and connection deatils.
+# check
